# Hummer-Virtual-JS-Engine

./: .clang-format  .gitignore  .gitmodules  .gn  BUILD.gn  BUILDCONFIG.gn  LICENSE  README.md  build-hermes-android.sh  build-qjs-android.sh  gn_to_cmake.py
Example/: main.c
Example.xcodeproj/: project.pbxproj
NAPI/: js_native_api.c  js_native_api.h  js_native_api_jsc.c  js_native_api_jsc.h  js_native_api_types.c  js_native_api_types.h
include/hermes/: External.h  FunctionInfo.h  HermesExecutorRuntimeAdapter.h  OpaqueNAPICallbackInfo.h  OpaqueNAPIEnv.h  OpaqueNAPIEscapableHandleScope.h  OpaqueNAPIHandleScope.h  OpaqueNAPIRef.h
include/napi/: js_native_api.h  js_native_api_debugger.h  js_native_api_debugger_hermes_types.h  js_native_api_types.h  js_native_api_utility.h  napi_error_status.def
src/: HermesExternalObject.cpp  HermesExternalObject.h  external.cpp  external.h  js_native_api_common.c  js_native_api_hermes.cc  js_native_api_hermes.cpp  js_native_api_hermes_internals.h  js_native_api_jsc.c  js_native_api_qjs.c  js_native_api_utility.c
src/hermes/: External.cpp  FunctionInfo.cpp  HermesExecutorRuntimeAdapter.cpp  OpaqueNAPICallbackInfo.cpp  OpaqueNAPIEnv.cpp  OpaqueNAPIEscapableHandleScope.cpp  OpaqueNAPIHandleScope.cpp  OpaqueNAPIRef.cpp  js_native_api_hermes.cc  js_native_api_hermes_inspector.cpp
src/inspector/: js_native_api_hermes_inspector.cpp  js_native_api_hermes_inspector.h
test/: 2_function_arguments.cc  2_function_arguments.cpp  3_callbacks.cc  3_callbacks.cpp  4_object_factory.cc  4_object_factory.cpp  5_function_factory.cc  5_function_factory.cpp  6_object_wrap.cc  6_object_wrap.cpp  callable.cpp  common.c  conversion.cpp  general.cpp  js_native_api_test.cpp  object.cpp  reference.cpp  test.cpp  test_array.cc  test_array.cpp  test_constructor.cc  test_constructor.cpp  test_conversions.cc  test_conversions.cpp  test_error.cc  test_error.cpp  test_exception.cc  test_exception.cpp  test_function.cc  test_function.cpp  test_general.cc  test_general.cpp  test_handle_scope.cc  test_handle_scope.cpp  test_new_target.cc  test_new_target.cpp  test_number.cc  test_number.cpp  test_object.cc  test_object.cpp  (+9 more)
test/builtin/: babel.config.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
test/builtin/src/: 2_function_arguments.ts  3_callbacks.ts  4_object_factory.ts  5_function_factory.ts  6_object_wrap.ts  assert.ts  callable.ts  conversion.ts  general.ts  index.ts  object.ts  test_array.ts  test_constructor_test.ts  test_constructor_test2.ts  test_conversions.ts  test_error.ts  test_exception.ts  test_function.ts  test_general_test.ts  test_general_testGlobals.ts  test_general_testInstanceOf.ts  test_general_testNapiRun.ts  test_general_testNapiStatus.ts  test_handle_scope.ts  test_new_target.ts  test_number.ts  test_object.ts  test_promise.ts  test_properties.ts  test_string.ts  test_symbol_test1.ts  test_symbol_test2.ts  test_symbol_test3.ts  typeof.ts
test/include/: common.h  js_native_api_test.h  napi_assert.h  test.h
toolchain/: BUILD.gn
utils/: hermes_mac_build.sh
